--- a/RickandMorty/package.json
+++ b/RickandMorty/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.21",
+    "@react-navigation/native-stack": "^7.8.0",
+    "@react-navigation/stack": "^7.6.7",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0"
   },
   "private": true
 }
